feat:新增组件，引入UI库，搭建基础布局

--- a/useClass/package.json
+++ b/useClass/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@xstate/vue": "^3.0.0",
     "rxjs": "^7.8.1",
+    "tdesign-vue-next": "^1.8.0",
     "vue": "^3.3.4",
+    "vue-router": "^4.2.5",
     "xstate": "^5.2.1"
   },
   "devDependencies": {
