--- a/useClass/tsconfig.json
+++ b/useClass/tsconfig.json
@@ -26,7 +26,8 @@
     "src/**/*.ts",
     "src/**/*.d.ts",
     "src/**/*.tsx",
-    "src/**/*.vue"
+    "src/**/*.vue",
+    "node_modules/tdesign-vue-next/global.d.ts"
   ],
   "references": [
     {
