feat:朴素化页面布局，新增样式变量，新增codepen笔记，修改网格布局

--- a/vue-demos/tsconfig.json
+++ b/vue-demos/tsconfig.json
@@ -5,11 +5,13 @@
       "@/*": [
         "/src/*"
       ]
-    }
+    },
+    "jsx": "preserve",
+    "jsxImportSource": "vue",
   },
   "references": [
     {
-      "path": "./tsconfig.node.json"
+      "path": "./tsconfig.node.json",
     },
     {
       "path": "./tsconfig.app.json"
