--- a/vue-demos/package.json
+++ b/vue-demos/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@vueuse/core": "^10.11.0",
     "rxjs": "^7.8.1",
     "vite-plugin-ejs": "^1.7.0",
     "vue": "^3.4.21",
