--- a/vue-demos/package.json
+++ b/vue-demos/package.json
@@ -23,7 +23,7 @@
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
     "@tsconfig/node20": "^20.1.2",
-    "@types/node": "^20.11.28",
+    "@types/node": "^20.14.11",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "@vue/eslint-config-prettier": "^8.0.0",
@@ -36,6 +36,8 @@
     "sass": "^1.72.0",
     "typescript": "~5.4.0",
     "vite": "^5.1.6",
+    "vite-bundle-analyzer": "^0.10.3",
+    "vite-plugin-markdown": "^2.2.0",
     "vue-tsc": "^2.0.6"
   }
 }
