feat: 新增JSON可视化组件

--- a/vue-demos/package.json
+++ b/vue-demos/package.json
@@ -14,6 +14,9 @@
   },
   "dependencies": {
     "@vueuse/core": "^10.11.0",
+    "highlight.js": "^11.10.0",
+    "monaco-editor": "^0.50.0",
+    "monaco-themes": "^0.4.4",
     "rxjs": "^7.8.1",
     "vite-plugin-ejs": "^1.7.0",
     "vue": "^3.4.21",
@@ -38,6 +41,7 @@
     "vite": "^5.1.6",
     "vite-bundle-analyzer": "^0.10.3",
     "vite-plugin-markdown": "^2.2.0",
+    "vite-plugin-monaco-editor": "^1.1.0",
     "vue-tsc": "^2.0.6"
   }
 }
