feat: JSON可视化组件添加导入导出JSON功能，修改静态JSON引入

--- a/vue-demos/tsconfig.json
+++ b/vue-demos/tsconfig.json
@@ -2,19 +2,15 @@
   "files": [],
   "compilerOptions": {
     "paths": {
-      "@/*": [
-        "/src/*"
-      ]
+      "@/*": ["/src/*"]
     },
     "jsx": "preserve",
     "jsxImportSource": "vue",
-    "types": [
-      "node"
-    ]
+    "types": ["node"]
   },
   "references": [
     {
-      "path": "./tsconfig.node.json",
+      "path": "./tsconfig.node.json"
     },
     {
       "path": "./tsconfig.app.json"
