--- a/vue-demos/tsconfig.node.json
+++ b/vue-demos/tsconfig.node.json
@@ -5,7 +5,7 @@
     "vitest.config.*",
     "cypress.config.*",
     "nightwatch.conf.*",
-    "playwright.config.*",
+    "playwright.config.*"
   ],
   "compilerOptions": {
     "composite": true,
@@ -13,8 +13,6 @@
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
     "module": "ESNext",
     "moduleResolution": "Bundler",
-    "types": [
-      "node"
-    ]
+    "types": ["node"]
   }
 }
