--- a/vue-demos/package.json
+++ b/vue-demos/package.json
@@ -21,7 +21,8 @@
     "vite-plugin-ejs": "^1.7.0",
     "vue": "^3.4.21",
     "vue-draggable-plus": "^0.3.5",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "vue-showdown": "^4.2.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
