--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,8 @@ jobs:
         with:
           node-version: '20.x'
       - name: 安装项目依赖
+        working-directory: ./vue-demo
         run: npm install
       - name: 打包
+        working-directory: ./vue-demo
         run: npm run build
