feat: 删除GitAction流程，配置本地一键打包部署

--- a/vue-demos/package.json
+++ b/vue-demos/package.json
@@ -6,11 +6,13 @@
   "scripts": {
     "dev": "vite",
     "build": "run-p type-check \"build-only {@}\" --",
+    "build-upload": "run-s build upload",
     "preview": "vite preview",
     "build-only": "vite build",
     "type-check": "vue-tsc --build --force",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "upload": "scp -r ./mapotato 腾讯云:/home/nginx/html/"
   },
   "dependencies": {
     "@vueuse/core": "^10.11.0",
