reflector 1. **开发模式配置更新** - 修改了`package.json`中的开发脚本，通过指定`--host`参数来运行Vite。这将允许在本地网络中访问开发服务器，便于在不同设备上进行调试。 2. **设备适配增强** - 在`App.vue`中引入了对移动设备的适配逻辑。应用现在会检测是否在手机或平板上运行，并在检测到这些设备时显示一条提示信息，指导用户使用Chrome桌面浏览器以获得最佳体验。 3. **样式调整** - 对`collapse-panel.vue`组件的网格布局间隙进行了微调。在面板折叠时通过设置行间隙为0，确保了面板之间的无缝外观，提升了用户界面的一致性。 4. **布局优化** - 在`index-notes.vue`中，对网格布局的笔记展示进行了调整，引入了行模板重复(auto-fill)和最小高度(minmax)，使得笔记卡片能够更好地响应屏幕尺寸变化，优化了视觉效果和空间利用。
这些更改涉及前端开发配置、设备适配、UI细节调整等方面，旨在改善开发流程和用户体验。

--- a/vue-demos/package.json
+++ b/vue-demos/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "run-p type-check \"build-only {@}\" --",
     "build-upload": "run-s build cls zip cls upload cls unzip",
     "preview": "vite preview",
