refactor(vue-demos): 优化打包与部署脚本，美化UI和代码编辑器
- 精简上传和解压的npm脚本，引入新的`upload-unzip`脚本简化部署过程。
- 调整`base.scss`中的字体属性，确保与设计一致。
- 更新`reset.scss`中按钮的样式，使用变量替代硬编码的颜色值。
- 重构`customMonaco.ts`和`editor.vue`，使用更简洁的导入语句和组件命名。
- 优化`layout-main.vue`的主布局结构，清理无效的`transition`和`keep-alive`组件。
- 调整`codepen-notes.vue`和`directed-graph.vue`中的样式和脚本，增强可读性和性能。
- 重构`juejin-notes`模块，直接从markdown文件生成文章列表，提高加载效率。

本次提交涉及UI的微调、代码结构的优化以及部署流程的简化，旨在提升开发和用户体验。

--- a/vue-demos/package.json
+++ b/vue-demos/package.json
@@ -7,13 +7,14 @@
     "dev": "vite",
     "build": "run-p type-check \"build-only {@}\" --",
     "build-upload": "run-s build cls zip cls upload cls unzip",
+    "upload-unzip": "run-s upload cls unzip",
     "preview": "vite preview",
     "build-only": "vite build",
     "type-check": "vue-tsc --build --force",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write src/",
-    "upload": "scp ./mapotato.zip 腾讯云:/home/nginx/html/",
     "zip": "powershell -Command \"Compress-Archive -Path ./mapotato/* mapotato.zip -Force\"",
+    "upload": "scp ./mapotato.zip 腾讯云:/home/nginx/html/",
     "unzip": "ssh 腾讯云 unzip -o /home/nginx/html/mapotato.zip -d /home/nginx/html/mapotato",
     "cls": "cls"
   },
