--- a/vue-demos/.vscode/settings.json
+++ b/vue-demos/.vscode/settings.json
@@ -1,7 +1,6 @@
 {
-  "css.customData": [
-    "./.vscode/custom-css.json"
-  ],
+  "css.customData": ["./.vscode/custom-css.json"],
+  "editor.formatOnSave": true,
   "cSpell.words": [
     "beian",
     "Biao",
