--- a/vue-demos/package.json
+++ b/vue-demos/package.json
@@ -19,6 +19,7 @@
     "cls": "cls"
   },
   "dependencies": {
+    "@vueuse/components": "^12.0.0",
     "@vueuse/core": "^10.11.0",
     "highlight.js": "^11.10.0",
     "monaco-editor": "^0.50.0",
@@ -27,6 +28,7 @@
     "vite-plugin-ejs": "^1.7.0",
     "vue": "^3.4.21",
     "vue-draggable-plus": "^0.3.5",
+    "vue-icons-plus": "^0.1.7",
     "vue-router": "^4.3.0",
     "vue-showdown": "^4.2.0"
   },
