--- a/vue-demos/package.json
+++ b/vue-demos/package.json
@@ -14,18 +14,25 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write src/",
     "zip": "powershell -Command \"Compress-Archive -Path ./mapotato/* mapotato.zip -Force\"",
-    "upload": "scp ./mapotato.zip 腾讯云:/home/nginx/html/",
-    "unzip": "ssh 腾讯云 unzip -o /home/nginx/html/mapotato.zip -d /home/nginx/html/mapotato",
+    "upload": "scp ./mapotato.zip 腾讯云:/var/www/html/",
+    "unzip": "ssh 腾讯云 unzip -o /var/www/html/mapotato.zip -d /var/www/html/mapotato",
     "cls": "cls"
   },
   "dependencies": {
+    "@mapotato-pkg/hello-wasm": "^0.2.0",
+    "@tresjs/cientos": "^4.1.0",
+    "@tresjs/core": "^4.3.3",
     "@vueuse/components": "^12.0.0",
     "@vueuse/core": "^10.11.0",
+    "big.js": "^6.2.2",
     "highlight.js": "^11.10.0",
     "monaco-editor": "^0.50.0",
     "monaco-themes": "^0.4.4",
     "rxjs": "^7.8.1",
+    "three": "^0.173.0",
     "vite-plugin-ejs": "^1.7.0",
+    "vite-plugin-top-level-await": "^1.4.4",
+    "vite-plugin-wasm": "^3.4.1",
     "vue": "^3.4.21",
     "vue-draggable-plus": "^0.3.5",
     "vue-icons-plus": "^0.1.7",
@@ -35,7 +42,9 @@
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
     "@tsconfig/node20": "^20.1.2",
+    "@types/big.js": "^6.2.2",
     "@types/node": "^20.14.11",
+    "@types/three": "^0.173.0",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "@vue/eslint-config-prettier": "^8.0.0",
